feat: use fixed thread pool fir okhttp 4